Fix horizontal scrollbar in /pad anonymous mode

--- a/customize.dist/src/less/toolbar.less
+++ b/customize.dist/src/less/toolbar.less
@@ -855,9 +855,6 @@ body .cryptpad-toolbar {
                     width: 100%;
                     cursor: default;
                     font-size: 32px;
-                    .fa {
-                        margin-left: 3px;
-                    }
                 }
             }
         }
